--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,10 @@
   external_node_modules = ["express"]
   node_bundler = "esbuild"
 [[plugins]]
-  package = "/plugins/netlify-plugin-svg-sprite"
+  package = "/netlify/plugins/netlify-plugin-svg-sprite"
+  [plugins.inputs]
+    dist = "./src/assets/"
+    src = "./src/icons/"
 [[redirects]]
   force = true
   from = "/api/*"
