--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,5 +68,5 @@
     "useDefineForClassFields": true,
     "useUnknownInCatchVariables": true
   },
-  "include": ["**/*"]
+  "include": ["./netlify/functions/**/*", "./src/**/*"],
 }
