--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/cookie-parser": "1.4.3",
     "@types/crypto-js": "4.1.1",
     "@types/express": "4.17.15",
-    "@types/node": "18.11.17",
+    "@types/node": "18.11.18",
     "@types/pause-me": "1.1.0",
     "@types/sanitize-html": "2.8.0",
     "@types/svg-sprite": "0.0.34",
@@ -30,7 +30,6 @@
     "@vue/devtools": "6.4.5",
     "@windicss/plugin-scrollbar": "1.2.3",
     "axios": "1.1.3",
-    "chokidar": "3.5.3",
     "cookie-parser": "1.4.6",
     "crypto-js": "4.1.1",
     "date-fns": "2.29.3",
@@ -41,6 +40,7 @@
     "mathjs": "11.5.0",
     "mime": "3.0.0",
     "netlify-cli": "12.5.0",
+    "netlify-plugin-svg-sprite": "1.0.1",
     "pause-me": "1.2.0",
     "pinia": "2.0.28",
     "qs": "6.11.0",
@@ -52,10 +52,10 @@
     "vite": "4.0.3",
     "vite-plugin-html": "3.2.0",
     "vite-plugin-windicss": "1.8.10",
-    "vite-svg-loader": "3.6.0",
+    "vite-svg-loader": "4.0.0",
     "vue": "3.2.45",
     "vue-router": "4.1.6",
-    "vue-tsc": "1.0.16",
+    "vue-tsc": "1.0.18",
     "vue3-click-away": "1.2.4",
     "windicss": "3.5.6"
   },
